test_url/error_log.txt
Error occurred while accessing https://main.knesset.gov.il/pages/default.aspx:
Traceback (most recent call last):
  File "C:\Python_env\.venv\Lib\site-packages\urllib3\connectionpool.py", line 775, in urlopen
    self._prepare_proxy(conn)
  File "C:\Python_env\.venv\Lib\site-packages\urllib3\connectionpool.py", line 1044, in _prepare_proxy
    conn.connect()
  File "C:\Python_env\.venv\Lib\site-packages\urllib3\connection.py", line 710, in connect
    self._tunnel()
  File "C:\Users\SL1047\AppData\Local\Programs\Python\Python312\Lib\http\client.py", line 979, in _tunnel
    raise OSError(f"Tunnel connection failed: {code} {message.strip()}")
OSError: Tunnel connection failed: 403 Forbidden

The above exception was the direct cause of the following exception:

urllib3.exceptions.ProxyError: ('Unable to connect to proxy', OSError('Tunnel connection failed: 403 Forbidden'))

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Python_env\.venv\Lib\site-packages\requests\adapters.py", line 667, in send
    resp = conn.urlopen(
           ^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\urllib3\connectionpool.py", line 843, in urlopen
    retries = retries.increment(
              ^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\urllib3\util\retry.py", line 519, in increment
    raise MaxRetryError(_pool, url, reason) from reason  # type: ignore[arg-type]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host='main.knesset.gov.il', port=443): Max retries exceeded with url: /pages/default.aspx (Caused by ProxyError('Unable to connect to proxy', OSError('Tunnel connection failed: 403 Forbidden')))

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\SL1047\Desktop\New folder (4)\test_url\check_script - Copy.py", line 64, in <module>
    soup = download_page(url)
           ^^^^^^^^^^^^^^^^^^
  File "C:\Users\SL1047\Desktop\New folder (4)\test_url\check_script - Copy.py", line 54, in download_page
    response = scraper.get(url, headers=DOWNLOAD_HEADERS, proxies=proxies, timeout=10)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\requests\sessions.py", line 602, in get
    return self.request("GET", url, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\cloudscraper\__init__.py", line 259, in request
    self.perform_request(method, url, *args, **kwargs)
  File "C:\Python_env\.venv\Lib\site-packages\cloudscraper\__init__.py", line 192, in perform_request
    return super(CloudScraper, self).request(method, url, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\requests\sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\requests\sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python_env\.venv\Lib\site-packages\requests\adapters.py", line 694, in send
    raise ProxyError(e, request=request)
requests.exceptions.ProxyError: HTTPSConnectionPool(host='main.knesset.gov.il', port=443): Max retries exceeded with url: /pages/default.aspx (Caused by ProxyError('Unable to connect to proxy', OSError('Tunnel connection failed: 403 Forbidden')))

--------------------------------------------------------------------------------
